[package]
name = "maj-spirit"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
deadpool-sqlite = "0.12.1"
hex = "0.4.3"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
